# ajf

./: .bazelrc  .eslintrc.json  .firebaserc  .gitignore  .ng-dev-config.ts  .prettierignore  .stylelintrc.json  .travis.yml  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CODE_STRUCTURE.md  CONTRIBUTING.md  README.md  WORKSPACE  angular-tsconfig.json  angular.json  build-config.js  eslint.config.js  gulpfile.js  index.bzl  merge-config.js  package.json  packages.bzl  pkg-externals.bzl  repomix-output.xml  rollup-globals.bzl  stylelint-config.json  testformschema.json  testreportschema.json  tsconfig.json  tslint.json
src/: BUILD.bazel  README.md  bazel-tsconfig-build.json  bazel-tsconfig-test.json  circular-deps-test.conf.js  module-typings.d.ts  tsconfig-legacy.json
src/ajf-examples/: BUILD.bazel  config.bzl  package.json  tsconfig.json
src/calendars/: BUILD.bazel  config.bzl  package.json  public-api.ts  tsconfig-build.json  tsconfig-tests.json  tsconfig.json  version.ts
src/core/: BUILD.bazel  config.bzl  css-element-queries-typings.d.ts  package.json  public-api.ts  tsconfig-build.json  tsconfig-tests.json  tsconfig.json  typings.d.ts
src/dev-app/: BUILD.bazel  dev-app.ts  esbuild.config.mjs  index.html  main-module.ts  main.ts  routes.ts  tsconfig.json
src/dev-app-ion/: BUILD.bazel  admin-mocks.ts  ajf-module.ts  dev-app-module.ts  dev-app.html  dev-app.ts  empty.ts  index.html  main-aot.ts  main-module.ts  main.ts  routes.ts  system-config.ts  tsconfig-aot.json  tsconfig-build.json  tsconfig.json
src/dev-app-mat/: BUILD.bazel  ajf-module.ts  dev-app-module.ts  dev-app.html  dev-app.ts  index.html  main-aot.ts  main-module.ts  main.ts  routes.ts  system-config.ts  system-rxjs-operators.ts  tsconfig-aot.json  tsconfig-build.json  tsconfig.json  typings.d.ts
src/e2e-app/: BUILD.bazel  devserver-configure.js  e2e-app.ts  esbuild.config.mjs  index.html  main-module.ts  protractor.conf.js  rollup-with-linker.config.js  routes.ts  tsconfig.json
src/e2e-app-ion/: BUILD.bazel  devserver-configure.js  e2e-app-module.ts  e2e-app.ts  index.html  main-module.ts  system-config.ts  test_suite.bzl  tsconfig-build.json  tsconfig.json
src/e2e-app-mat/: BUILD.bazel  devserver-configure.js  e2e-app-module.ts  e2e-app.ts  index.html  main-module.ts  system-config.ts  tsconfig-build.json  tsconfig.json
src/ionic/: BUILD.bazel  config.bzl  index.ts  package.json  tsconfig-build.json  tsconfig-tests.json  tsconfig.json
src/ionic-examples/: BUILD.bazel  load-example.ts  package.json  tsconfig-build.json  tsconfig.json
src/material/: BUILD.bazel  config.bzl  index.ts  package.json  tsconfig-build.json  tsconfig-tests.json  tsconfig.json
src/material-examples/: BUILD.bazel  ajf-module.ts  example-module.ts  package.json  tsconfig-build.json  tsconfig.json
src/monaco/: package.json
src/universal-app/: index.html  prerender.ts
src/universal-app-ion/: BUILD.bazel  index.html  tsconfig-build.json  tsconfig-prerender.json  tsconfig.json
src/universal-app-mat/: BUILD.bazel  tsconfig-build.json  tsconfig-prerender.json  tsconfig.json
test/: BUILD.bazel  angular-test-init-spec.ts  karma-system-config.js  karma-test-shim.js  karma.conf.js  requirejs-init.ts  test-blocklist.ts
tools/: BUILD.bazel  ajf_setup_workspace.bzl  bazel-stamp-vars.sh  create-system-config.bzl  defaults.bzl  system-config-tmpl.js  system-rxjs-operators.js  tsconfig.json  webpack_bundle.bzl
tools/angular/: BUILD.bazel  create_linker_esbuild_plugin.mjs  esbuild.config.mjs  index.bzl
tools/axe-protractor/: BUILD.bazel
tools/bazel/: postinstall-patches.js  update-ngcc-main-fields.js
tools/cherry-pick-patch/: github.ts
tools/dev-server/: dev-server.ts  ibazel.ts  launcher_template.sh  main.ts
tools/dgeni/: BUILD.bazel  bazel-bin.ts  docs-package.ts  generate-docs.ts  index.bzl  index.ts  tsconfig.json
tools/esbuild/: custom_resolve_esbuild_plugin.mjs  esbuild-amd-config.mjs
tools/example-module/: BUILD.bazel  example-module.template  generate-example-module.ts
tools/gulp/: gulpfile.ts  packages.ts  tsconfig.json
tools/highlight-files/: BUILD.bazel  highlight-code-block.ts  highlight-files.ts  index.bzl  tsconfig.json
tools/json-schema/: BUILD.bazel  generate-json-schema.ts  index.bzl  json-schema-to-ts.ts  tsconfig-generation.json
tools/legacy-release/: publish-release.ts  stage-release.ts
tools/markdown-to-html/: BUILD.bazel  docs-marked-renderer.ts  transform-markdown.ts  tsconfig.json
tools/npm/: check-npm.js  css-element-queries-bundle.js  date-fns-bundle.js  debug-bundle.js  leaflet-bundle.js
tools/package-docs-content/: index.bzl
tools/package-tools/: build-bundles.ts  build-config.ts  build-release.ts  compile-entry-point.ts  entry-point-package-json.ts  inline-resources.ts  rollup-globals.ts  secondary-entry-points.ts  version-placeholders.ts
tools/postcss/: compare-nodes.ts
tools/postinstall/: apply-patches.js  patch-gic-ionic-package.js  patch-packages.js  update-ngcc-main-fields.js
tools/public_api_guard/: BUILD.bazel  generate-guard-tests.bzl
tools/region-parser/: tsconfig.json
tools/release/: base-release-task.ts  changelog.ts  publish-release.ts  stage-release.ts
tools/rollup_cjs/: BUILD.bazel  rollup.config.js  rollup_bundle.bzl
tools/rxjs/: rxjs_shims.js
tools/schemas_guard/: BUILD.bazel  diff_test.bzl  generate-guard-tests.bzl
tools/spec-bundling/: esbuild.config-tmpl.mjs  index.bzl
tools/stylelint/: loader-rule.js  no-ampersand-beyond-selector-start.ts  no-concrete-rules.ts  no-import.ts  no-nested-mixin.ts  no-top-level-ampersand-in-mixin.ts  no-unused-import.ts  selector-no-deep.ts  single-line-comment-only.ts  theme-mixin-api.ts
tools/third-party-libs/: BUILD.bazel  chart-js-bundle.js  chart-piecelabel-js-bundle.js  esprima-bundle.js  ngx-color-picker-bundle.js  npm_umd_bundle.patch  numeral-bundle.js  rollup.config-tmpl.js  third-party-bundle.bzl  zxing-library-bundle.js
tools/tslint-rules/: noLifecycleInvocationRule.ts  requireLicenseBannerRule.ts
tools/vfs-fonts/: BUILD.bazel  index.bzl  tsconfig.json  vfs-fonts-generator.ts
(+2456 files in other folders)
