package(default_visibility=["//visibility:public"])

load("//tools/rollup_cjs:rollup_bundle.bzl", "rollup_bundle")
load("//tools:defaults.bzl", "ts_library")
load("//tools/build_files/ionic:defs.bzl", "IONIC_FILES", "IONIC_ENTRIES", "IONIC_CORE_FILES")

# Common set-up for all Ajf tests.
ts_library(
  name = "angular_test_init",
  testonly = True,
  deps = [
    "@angular//packages/core/testing",
    "@angular//packages/platform-browser-dynamic/testing",
    "@ajfdeps//@types/jasmine",
  ],
  # This file *must* end with "spec" in order for ts_web_test to load it.
  srcs = ["angular-test-init-spec.ts"],
)

rollup_bundle(
  name = "debug_bundle",
  deps = [
    "@ajfdeps//debug",
  ],
  entry_point = "external/ajfdeps/node_modules/debug/src/browser.js",
)

rollup_bundle(
  name = "date_fns_bundle",
  deps = [
    "@ajfdeps//date-fns",
  ],
  entry_point = "external/ajfdeps/node_modules/date-fns/index.js",
)

rollup_bundle(
  name = "ionic_core_loader_bundle",
  deps = [
    "@ajfdeps//@ionic/core",
  ],
  entry_point = "external/ajfdeps/node_modules/@ionic/core/loader/index.js",
)

rollup_bundle(
  name = "ionic_core_bundle",
  deps = [
    "@ajfdeps//@ionic/core",
  ],
  entry_point = "external/ajfdeps/node_modules/@ionic/core/dist/esm/es5/index.js",
)

rollup_bundle(
  name = "ionicons_bundle",
  deps = [
    "@ajfdeps//ionicons",
  ],
  entry_point = "external/ajfdeps/node_modules/ionicons/dist/esm/index.js",
)

rollup_bundle(
  name = "ionicons_icons_bundle",
  deps = [
    "@ajfdeps//ionicons",
  ],
  entry_point = "external/ajfdeps/node_modules/ionicons/icons/index.js",
)

rollup_bundle(
  name = "ionic_native_keyboard_bundle",
  deps = [
    "@ajfdeps//@ionic-native/core",
    "@ajfdeps//@ionic-native/keyboard",
  ],
  entry_point = "external/ajfdeps/node_modules/@ionic-native/keyboard/ngx/index.js",
)

[genrule(
  name = "ionic_file_%s" % f,
  srcs = ["@ajfdeps//node_modules/@ionic/core:dist/ionic/%s.es5.js" % f],
  outs = ["build/%s.js" % f],
  cmd = """
    cp $(SRCS) $@
  """
) for f in IONIC_FILES]

[genrule(
  name = "ionic_entry_%s" % f,
  srcs = ["@ajfdeps//node_modules/@ionic/core:dist/ionic/%s.es5.entry.js" % f],
  outs = ["build/%s.entry.js" % f],
  cmd = """
    cp $(SRCS) $@
  """
) for f in IONIC_ENTRIES]

[genrule(
  name = "ionic_core_file_%s" % f,
  srcs = ["@ajfdeps//node_modules/@ionic/core:dist/ionic/%s.es5.js" % f],
  outs = ["ionic/%s.es5.js" % f],
  cmd = """
    cp $(SRCS) $@
  """
) for f in IONIC_FILES]

[genrule(
  name = "ionic_core_entry_%s" % f,
  srcs = ["@ajfdeps//node_modules/@ionic/core:dist/ionic/%s.es5.entry.js" % f],
  outs = ["ionic/%s.es5.entry.js" % f],
  cmd = """
    cp $(SRCS) $@
  """
) for f in IONIC_ENTRIES]

# [genrule(
#   name = "ionic_core_maim_file_%s" % f,
#   srcs = ["@ajfdeps//node_modules/@ionic/core:dist/ionic/%s.js" % f],
#   outs = ["ionic/%s.js" % f],
#   cmd = """
#     cp $(SRCS) $@
#   """
# ) for f in IONIC_CORE_FILES]

genrule(
  name = "ionic_core_main_file",
  srcs = ["@ajfdeps//node_modules/@ionic/core:dist/ionic/ionic.pgbl19pn.js"],
  outs = ["ionic/ionic.r9tjmy9m.js"],
  cmd = """
    cp $(SRCS) $@
  """
)

# Common set-up for all Ajf tests.
ts_library(
  name = "requirejs_init",
  testonly = True,
  deps = [
    "@ajfdeps//@types/jasmine",
  ],
  # This file *must* end with "spec" in order for ts_web_test to load it.
  srcs = ["requirejs-init.ts"],
)
