package(default_visibility = ["//visibility:public"])

load("//:packages.bzl", "CALENDARS_PACKAGES", "CALENDARS_TARGETS", "ROLLUP_GLOBALS")
load("//tools:defaults.bzl", "ng_module", "ng_package")

# Root "@ajf/calendars" entry-point that does not re-export individual entry-points.
ng_module(
    name = "calendars",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@ajf/calendars",
    deps = [
        "@npm//@angular/core",
    ],
)

filegroup(
    name = "overviews",
    srcs = ["//src/calendars/%s:overview" % name for name in CALENDARS_PACKAGES],
)

# Creates the @ajf/calendars package published to npm.
ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    entry_point = ":public-api.ts",
    globals = ROLLUP_GLOBALS,
    # TODO(devversion): Use the npm package for publishing. Right now this is disabled because
    # we build using AOT for serving & testing, but the `ng_package` rule should not include factory
    # files.
    tags = ["manual"],
    deps = CALENDARS_TARGETS,
)
