load("//src/calendars:config.bzl", "CALENDARS_ENTRYPOINTS", "CALENDARS_TARGETS")
load("//tools:defaults.bzl", "ng_package", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "calendars",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@ajf/calendars",
    deps = ["@npm//@angular/core"],
)

# Creates the @angular/cdk package published to npm.
ng_package(
    name = "npm_package",
    srcs = ["package.json"],
    data = [],
    entry_point = ":public-api.ts",
    tags = ["release-package"],
    deps = CALENDARS_TARGETS,
)

filegroup(
    name = "overviews",
    # Only secondary entry-points declare overview files currently. Entry-points
    # which contain a slash are not in the top-level and do not have an overview.
    srcs = ["//src/calendars/%s:overview" % ep for ep in CALENDARS_ENTRYPOINTS if not "/" in ep],
)
