package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")
load("@build_bazel_rules_nodejs//internal/common:devmode_js_sources.bzl", "devmode_js_sources")
load("//tools:create-system-config.bzl", "create_system_config")
load("//tools:defaults.bzl", "ng_module")
load("//tools/dev-server:index.bzl", "dev_server")

ng_module(
    name = "dev-app-mat",
    srcs = [
        "dev-app.ts",
        "main.ts",
        "main-module.ts",
    ],
    deps = [
        "//src/dev-app-mat/barcode",
        "//src/dev-app-mat/calendar",
        "//src/dev-app-mat/calendar-ethiopian",
        "//src/dev-app-mat/checkbox-group",
        "//src/dev-app-mat/dev-app",
        "//src/dev-app-mat/example",
        "//src/dev-app-mat/examples-page",
        "//src/dev-app-mat/fields",
        "//src/dev-app-mat/form-builder",
        "//src/dev-app-mat/forms",
        "//src/dev-app-mat/image",
        "//src/dev-app-mat/node-icon",
        "//src/dev-app-mat/page-slider",
        "//src/dev-app-mat/report-builder",
        "//src/dev-app-mat/reports",
        "//src/dev-app-mat/time",
        "//src/dev-app-mat/widgets",
        "@npm//@angular/router",
    ],
)

create_system_config(
    name = "system-config",
    output_name = "system-config.js",
)

# File group for all static files which are needed to serve the dev-app. These files are
# used in the devserver as runfiles and will be copied into the static web package that can
# be deployed on static hosting services (like firebase).
filegroup(
    name = "dev_app_mat_static_files",
    srcs = [
        "favicon.ico",
        "index.html",
        ":system-config",
        "//tools:system-rxjs-operators.js",
        "@npm//:node_modules/@ajf/icons/css/ajf-icons.css",
        "@npm//:node_modules/@ajf/icons/fonts/ajf.eot",
        "@npm//:node_modules/@ajf/icons/fonts/ajf.svg",
        "@npm//:node_modules/@ajf/icons/fonts/ajf.ttf",
        "@npm//:node_modules/@ajf/icons/fonts/ajf.woff",
        "@npm//:node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
        "@npm//:node_modules/@webcomponents/custom-elements/custom-elements.min.js",
        "@npm//:node_modules/@zxing/library/umd/index.min.js",
        "@npm//:node_modules/chart.js/Chart.umd.js",
        "@npm//:node_modules/chart.piecelabel.js/build/Chart.PieceLabel.min.js",
        "@npm//:node_modules/core-js/client/core.js",
        "@npm//:node_modules/css-element-queries/css-element-queries.umd.js",
        "@npm//:node_modules/date-fns/date-fns.umd.js",
        "@npm//:node_modules/debug/debug.umd.js",
        "@npm//:node_modules/esprima/esprima.umd.js",
        "@npm//:node_modules/flag-icon-css/css/flag-icon.min.css",
        "@npm//:node_modules/flag-icon-css/flags/4x3/bf.svg",
        "@npm//:node_modules/leaflet/dist/leaflet.css",
        "@npm//:node_modules/leaflet/leaflet.umd.js",
        "@npm//:node_modules/numeral/numeral.umd.js",
        "@npm//:node_modules/quill/dist/quill.min.js",
        "@npm//:node_modules/rxjs/bundles/rxjs.umd.min.js",
        "@npm//:node_modules/systemjs/dist/system.js",
        "@npm//:node_modules/tslib/tslib.js",
        "@npm//:node_modules/zone.js/dist/zone.js",
    ],
)

dev_server(
    name = "devserver",
    srcs = [":dev_app_mat_static_files"],
    additional_root_paths = [
        "npm/node_modules",
        # Needed for compatibility with "pkg_web" which always uses the tree
        # artifact output as workspace root.
        "ajf",
    ],
    tags = ["manual"],
    deps = [
        ":dev-app-mat",
    ],
)

# Collects all ES5 JavaScript files which are required to serve the dev-app. By default,
# ts_library and ng_module targets only expose the type definitmat files as outputs.
devmode_js_sources(
    name = "dev_app_mat_js_sources",
    tags = ["manual"],
    deps = [":dev-app-mat"],
)

# Target that builds a static web package of the dev-app. The web package can be
# deployed on static hosting services (such as firebase).
pkg_web(
    name = "web_package_mat",
    srcs = [
        ":dev_app_mat_js_sources",
        ":dev_app_mat_static_files",
    ],
    additional_root_paths = [
        "npm/node_modules",
    ],
    tags = ["manual"],
)
