load("@npm//@angular/dev-infra-private/bazel:extract_js_module_output.bzl", "extract_js_module_output")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")
load("//tools:create-system-config.bzl", "create_system_config")
load("//tools:defaults.bzl", "ng_module")
load("//tools/dev-server:index.bzl", "dev_server")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "dev-app",
    srcs = [
        "dev-app.ts",
        "main.ts",
        "main-module.ts",
    ],
    deps = [
        "//src/dev-app/dev-app",
        "//src/dev-app/example",
        "//src/dev-app/examples-page",
        "//src/dev-app/file-input",
        "//src/dev-app/i18n",
        "//src/dev-app/ion-barcode",
        "//src/dev-app/ion-calendar",
        "//src/dev-app/ion-checkbox-group",
        "//src/dev-app/ion-fields",
        "//src/dev-app/ion-forms",
        "//src/dev-app/ion-image",
        "//src/dev-app/ion-node-icon",
        "//src/dev-app/ion-page-slider",
        "//src/dev-app/ion-reports",
        "//src/dev-app/ion-widgets",
        "//src/dev-app/mat-barcode",
        "//src/dev-app/mat-calendar",
        "//src/dev-app/mat-calendar-ethiopian",
        "//src/dev-app/mat-checkbox-group",
        "//src/dev-app/mat-fields",
        "//src/dev-app/mat-form-builder",
        "//src/dev-app/mat-forms",
        "//src/dev-app/mat-image",
        "//src/dev-app/mat-node-icon",
        "//src/dev-app/mat-page-slider",
        "//src/dev-app/mat-report-builder",
        "//src/dev-app/mat-report-from-form",
        "//src/dev-app/mat-reports",
        "//src/dev-app/mat-time",
        "//src/dev-app/mat-widgets",
        "@npm//@angular/cdk",
        "@npm//@angular/router",
        "@npm//@gic/angular",
        "@npm//@ionic/angular",
    ],
)

create_system_config(
    name = "system-config",
    output_name = "system-config.js",
)

# File group for all static files which are needed to serve the dev-app. These files are
# used in the devserver as runfiles and will be copied into the static web package that can
# be deployed on static hosting services (like firebase).
filegroup(
    name = "dev_app_static_files",
    srcs = [
        "favicon.ico",
        "index.html",
        ":system-config",
        "//tools:system-rxjs-operators.js",
        "//tools/third-party-libs:amd_bundles",
        "@npm//:node_modules/@ajf/icons/css/ajf-icons.css",
        "@npm//:node_modules/@ajf/icons/fonts/ajf.eot",
        "@npm//:node_modules/@ajf/icons/fonts/ajf.svg",
        "@npm//:node_modules/@ajf/icons/fonts/ajf.ttf",
        "@npm//:node_modules/@ajf/icons/fonts/ajf.woff",
        "@npm//:node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
        "@npm//:node_modules/@ionic/angular/css/ionic.bundle.css",
        "@npm//:node_modules/core-js-bundle/index.js",
        "@npm//:node_modules/flag-icon-css/css/flag-icon.min.css",
        "@npm//:node_modules/flag-icon-css/flags/4x3/bf.svg",
        "@npm//:node_modules/leaflet/dist/leaflet.css",
        "@npm//:node_modules/rxjs/bundles/rxjs.umd.min.js",
        "@npm//:node_modules/systemjs/dist/system.js",
        "@npm//:node_modules/tslib/tslib.js",
        "@npm//:node_modules/zone.js/dist/zone.js",
    ],
)

dev_server(
    name = "devserver",
    srcs = [":dev_app_static_files"],
    additional_root_paths = [
        "npm/node_modules",
        # Needed for compatibility with "pkg_web" which always uses the tree
        # artifact output as workspace root.
        "gc_ajf",
    ],
    tags = ["manual"],
    deps = [
        ":dev-app",
    ],
)

# Collects all ES5 JavaScript files which are required to serve the dev-app. By default,
# ts_library and ng_module targets only expose the type definition files as outputs.
extract_js_module_output(
    name = "dev_app_js_sources",
    include_declarations = False,
    include_default_files = True,
    # `JSModuleInfo` resolves to the ES5 sources from TypeScript targets. See:
    # https://github.com/bazelbuild/rules_nodejs/blob/stable/packages/typescript/internal/build_defs.bzl#L334-L337
    # Note: We cannot use the named JS module provider because not all dependencies are
    # necessarily captured as named module. See: https://github.com/angular/components/commit/94289397cac94ca86a292b2cd64945df52bbb7fb.
    provider = "JSModuleInfo",
    tags = ["manual"],
    deps = [":dev-app"],
)

# Target that builds a static web package of the dev-app. The web package can be
# deployed on static hosting services (such as firebase).
pkg_web(
    name = "web_package",
    srcs = [
        ":dev_app_js_sources",
        ":dev_app_static_files",
    ],
    additional_root_paths = [
        "external/npm",
        "npm/node_modules",
    ],
    tags = ["manual"],
)
