load("@npm_bazel_typescript//:index.bzl", "ts_devserver")
load("//:packages.bzl", "getAngularUmdTargets")
load("//tools:defaults.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

exports_files([
    "protractor.conf.js",
    "start-devserver.js",
    "devserver-configure.js",
])

ng_module(
    name = "e2e-app",
    testonly = True,
    srcs = glob(
        ["**/*.ts"],
        exclude = ["test-util/**"],
    ),
    assets = glob(
        [
            "**/*.html",
            "**/*.css",
        ],
        exclude = ["index.html"],
    ),
    deps = [
        "//src/ajf-examples/private",
        "//src/core/file-input",
        "//src/ionic/calendar",
        "//src/ionic/forms",
        "//src/material/calendar",
        "//src/material/forms",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/elements",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ionic/angular",
        "@npm//@ngx-translate/core",
        "@npm//@ngx-translate/http-loader",
    ],
)

ts_devserver(
    name = "devserver",
    testonly = True,
    additional_root_paths = [
        "npm/node_modules",
    ],
    # Name of the AMD module that should be required on page load.
    entry_module = "gc_ajf/src/e2e-app/main",
    port = 4200,
    # Scripts which will be included in the serving_path bundle after
    # RequireJS has been loaded.
    scripts = [
        ":devserver-configure.js",
        "//tools/rxjs:rxjs_umd_modules",
        "@npm//:node_modules/tslib/tslib.js",
    ] + getAngularUmdTargets(),
    # Serving path of the bundle that serves all files specified in "deps" and "scripts".
    serving_path = "/bundle.js",
    # Files which should be provided by Bazel when running the devserver. These are not
    # automatically served, but can be loaded manually through HTTP requests.
    static_files = [
        "@npm//zone.js",
        "@npm//core-js",
        "@npm//css-element-queries",
        "@npm//date-fns",
        "@npm//esprima",
        "@npm//hammerjs",
        "@npm//leaflet",
        "@npm//numbro",
        "@npm//@ionic/core",
        "@npm//@ngx-translate/core",
        "@npm//@webcomponents/custom-elements",
        ":index.html",
    ],
    tags = ["manual"],
    deps = [":e2e-app"],
)
