package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_test")
load("//:packages.bzl", "CORE_TARGETS", "MATERIAL_TARGETS")
load("//tools:defaults.bzl", "ng_module", "ts_library")

ng_module(
    name = "kitchen-sink",
    srcs = [
        "kitchen-sink-root.ts",
        "kitchen-sink/kitchen-sink.ts",
    ],
    assets = [
        "kitchen-sink/kitchen-sink.html",
    ],
    deps = [
        "@npm//@angular/platform-server",
    ] + CORE_TARGETS + MATERIAL_TARGETS,
)

ts_library(
    name = "server",
    srcs = [
        "prerender.ts",
    ],
    deps = [
        ":kitchen-sink",
        "@npm//@angular/platform-server",
        "@npm//@types/node",
        "@npm//reflect-metadata",
        "@npm//zone.js",
    ],
)

nodejs_test(
    name = "server_test",
    data = [
        "index.html",
        ":server",
    ],
    entry_point = ":prerender.ts",
)
